QPID-7486 : Add support for classpath: URLs to allow (default) locations to be in terms of resources found within the classpath